# Marunthagam

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  marunthagam_spec_v1.docx
.claude/: settings.local.json
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  marunthagam_jni.cpp
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/scripts/: generate_live_data.py
dashboard/src/: App.css  App.jsx  main.jsx
dashboard/src/api/: mockData.js  realData.js
dashboard/src/components/: AlertPanel.css  AlertPanel.jsx  RoleBanner.css  RoleBanner.jsx  StatsSummary.css  StatsSummary.jsx  TriageHeatmap.css  TriageHeatmap.jsx  TriageTrendChart.css  TriageTrendChart.jsx
dashboard/src/i18n/: ta.js
dashboard/src/pages/: AlertsView.jsx  MapView.jsx  Overview.jsx  PageLayout.css  TrendsView.jsx
docs/: architecture.md  checkpoint.md  demo_video_script.md  kaggle_submission_checklist.md  kaggle_writeup.md  protocol_spec.md  status.md
docs/plans/: 2026-04-10-marunthagam-full-sprint.md  2026-05-06-pending-work.md  2026-05-07-sprint3-plan.md
eval/: requirements.txt
eval/analysis/2026-05-06/: _safety_reclassification.json  red_failure_modes.md  safety_failure_modes.md  specialist_diagnosis.md  tamil_human_eval_template.csv
eval/analysis/2026-05-07/: _compute_label_quality.py  _derm_verdicts.json  _rule_firing_audit.json  _triage_relabels.json  _user_labels.json  derm_clean_retrain_findings.md  derm_contamination_candidates.csv  derm_contamination_diff.json  imnci_rule_expansion_analysis.md  imnci_rule_schema_proposal.md  label_quality_findings.md  label_quality_spotcheck.csv  label_quality_spotcheck_LABELED.csv  safety_classifier_validation.md  safety_classifier_validation_report.md  task6_results.md  triage_green_relabel.csv  triage_green_relabel_LABELED.csv  triage_relabel_diff.json  triage_yellow_red_spotcheck.csv
eval/data/: adversarial_prompts.json  baseline_examples.json  safety_classifier_validation.jsonl  safety_classifier_validation_notes.md
eval/notebooks/: plot_results.py  results_analysis.ipynb
eval/notebooks/figures/: SUMMARY.md
eval/results/: ablation_rank_comparison.json  semantic_eval_20260506_195351.json
eval/scripts/: ablation_rank.py  audit_rule_firings.py  eval_chrf.py  eval_cross_train.py  eval_hf_adapter.py  eval_latency.py  eval_safety.py  eval_semantic_similarity.py  eval_triage.py  run_eval.py  run_logger.py  smoke_test_production_stack.py  task6_eval.py  update_rank_ablation_anchor.py  validate_safety_classifier.py
inference/: cli_demo.py  requirements.txt
inference/function_calling/: handler.py  schemas.py  test_handler.py
inference/protocol_engine/: engine.py  load_rules.py  logger.py  schema.sql  test_engine.py  test_logger.py
inference/protocol_engine/rules/: imnci_rules.json  imnci_rules_v2.json
protocol/schemas/: aggregation_record_v1.json  interaction_record_v1.json
training/: requirements.txt
training/configs/: baseline.yaml  lora_derm.yaml  lora_derm_clean.yaml  lora_maternal.yaml  lora_triage.yaml  lora_triage_local.yaml  lora_triage_rank16.yaml  lora_triage_relabel.yaml  lora_triage_relabel_6ep.yaml  router.yaml  router_local.yaml
training/data/: README.md
training/data/fixtures/: derm_reviewed.jsonl  maternal_reviewed.jsonl  triage_reviewed.jsonl
training/data/reviewed/: derm_approved.jsonl  (+2 more)
training/scripts/: _llama_cpp_setup.py  acquire_sources.py  apply_derm_contamination.py  apply_triage_relabel.py  baseline_eval.py  export_gguf.py  format_training_data.py  label_triage.py  run_full_pipeline.sh  run_full_training.sh  run_gguf_export.sh  run_local_lora_smoke.py  run_local_training_smoke.py  swap_triage_gguf_on_hf.py  train_lora.py  train_lora_classbal.py  train_router.py  translate_dataset.py  upload_all_to_hf.py  upload_to_hf.py
(+35 files in other folders)
